# Blender3.6_arm64

./: README.md
.github/workflows/: build.yml
android/: AndroidManifest.xml  CMakeLists.txt
android/ghost/: GHOST_SystemAndroid.cpp  GHOST_SystemAndroid.h  GHOST_WindowAndroid.cpp  GHOST_WindowAndroid.h
android/glu_stub/: glu_stub.c
android/jni/: blender_jni.cpp
android/src/com/blender/android/: BlenderActivity.java  BlenderLib.java
config/: animation.conf  full.conf  modelling.conf  platform_android.cmake
patches/: 0001-build-as-shared-library.patch  0002-ghost-android-egl.patch  0003-root-cmake-android-option.patch
scripts/: apply_patches.py  build_android.sh
